WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273858
MIMETypeRegistry::isPostScriptMIMEType() is no longer a relevant question
https://bugs.webkit.org/show_bug.cgi?id=273858
Summary
MIMETypeRegistry::isPostScriptMIMEType() is no longer a relevant question
Abrar Rahman Protyasha
Reported
2024-05-07 18:07:10 PDT
After
278471@main
, the only isPostScriptMIMEType() caller is in CachedImage::updateBufferInternal(), which would use the check to convert PostScript data to PDF data through PDFDocumentImage. However, PDFDocumentImage::create() no longer has this translation capability, and thus we no longer need to check for the presence of a PostScript resource.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-05-07 18:07:19 PDT
<
rdar://problem/127706013
>
Abrar Rahman Protyasha
Comment 2
2024-05-07 18:13:40 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28268
EWS
Comment 3
2024-05-08 13:00:42 PDT
Committed
278520@main
(8694a007981e): <
https://commits.webkit.org/278520@main
> Reviewed commits have been landed. Closing PR #28268 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug