MIMETypeRegistry::isPostScriptMIMEType() is no longer a relevant question https://bugs.webkit.org/show_bug.cgi?id=273858 rdar://127706013

Reviewed by Tim Horton.

After 278471@main, the only callers of isPostScriptMIMEType() are
Image::create() and CachedImage::updateBufferInternal(), both of which
use the check to convert PostScript data to PDF data. Since we no longer
ship this translation capability, we no longer need to check for the
presence of a PostScript resource.

* Source/WebCore/loader/cache/CachedImage.cpp:
(WebCore::CachedImage::updateBufferInternal):
(WebCore::CachedImage::isPostScriptResource const): Deleted.
* Source/WebCore/loader/cache/CachedImage.h:
* Source/WebCore/platform/MIMETypeRegistry.cpp:
(WebCore::MIMETypeRegistry::isPostScriptMIMEType): Deleted.
* Source/WebCore/platform/MIMETypeRegistry.h:
* Source/WebCore/platform/graphics/Image.cpp:
(WebCore::Image::create):
(WebCore::Image::isPostScriptResource): Deleted.
* Source/WebCore/platform/graphics/Image.h:

Canonical link: https://commits.webkit.org/278520@main